[package]
name = "todoster"
version = "0.1.0"
edition = "2021"
authors = ["Bea Boxler <bea@boxler.me>"]
description = "Discovers and lists all todos in your project"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = { version = "1.9.4", default-features = false, features = ["unicode-perl", "unicode-case"] }
termion = "2.0.1"
